big fixes dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -634,9 +634,8 @@ footer span:hover {
   border-radius: 10px;
 }
 
-.darkmode--activated .events .card .card-text {
-  color: white;
-  font-size: 14px;
+.events .card .card-text {
+  isolation: isolate;
 }
 
 .darkmode-toggle {
